fix spacing

--- a/app/assets/stylesheets/ajo_cms/application.css.sass
+++ b/app/assets/stylesheets/ajo_cms/application.css.sass
@@ -78,6 +78,8 @@ html, body
 		padding: 0px
 	padding: 2px 0px 2px 0px
 
+.footer
+	margin-top: 20px
 
 .section_map
 	min-height: 25px
